--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "repository": "https://github.com/newbornfrontender/udemy-modern-js-from-the-beginning.git",
   "author": "Infant Frontender <newbornfrontender@gmail.com>",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "prettier": "^1.15.3"
+  }
 }
