--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "pretty": "prettier --write *.{json,js}"
   },
   "devDependencies": {
-    "prettier": "^1.15.3"
+    "prettier": "^1.15.3",
+    "serve": "^10.1.1"
   }
 }
